# image_processor

./: CMakeLists.txt  LICENSE  additional.cpp  additional.h  argparser.cpp  argparser.h  basicfilter.h  exception.h  image_processor.cpp  logger.cpp  logger.h  matrix_filter.h
filters/: crop.cpp  edge_detection.cpp  edge_detection.h  grayscale.h  negative.h
image_processing/: abstract_image.cpp  abstract_image.h  image.cpp  image_holder.cpp  image_holder.h
sources/: exception.cpp  filter.cpp  filter_factory.h
sources/filters/: bilateral.cpp  bilateral.h  crop.h  gauss_blur.cpp  gauss_blur.h  grayscale.cpp  negative.cpp  sharp.cpp  sharp.h
sources/image_processing/: image.h
